--- a/index.html
+++ b/index.html
@@ -1,203 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accio-contest-2</title>
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <!-- navigation bar  -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Practice</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+    <!-- Nav bar -->
     <nav>
-      <ul class="navBar flex1">
-        <li class="nav_left flex1">
-          <img src="./Group 23.png" alt="Comapany logo" />
+        <ul class="nav-flex">
+            <li class="nav-left flex-1">
+                <img src="./images/Group 23.png" alt="company"/>
 
-          <p><a href="#">Blog</a></p>
-        </li>
-        <li class="nav_right flex1">
-          <div>
-            <i class="fa-solid fa-caret-down"></i>
-            <a href="#">Archives</a>
-          </div>
-          <div>
-            <i class="fa-solid fa-cart-shopping"></i>
-            <a href="#">Store</a>
-          </div>
-
-          <button>Get a Quote</button>
-        </li>
-      </ul>
+                <p><a href="#">Blog</a></p>
+            </li>
+            <li class="nav-right flex-1">
+                <div>
+                    <i class="fa-solid fa-caret-down"></i>
+                    <a href="#">Archives</a>
+                  </div>
+                  <div>
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <a href="#">Store</a>
+                  </div>
+                  <button>Get a Quote</button>
+            </li>
+        </ul>
     </nav>
-
-    <!-- main- hero section -->
-
-    <div class="hero flex1">
-      <div class="hero_text">
-        <h2 class="hero_heading">Let's Explore</h2>
-
-        <h2 class="hero_heading">New Possibilities..</h2>
-        <div class="hero_search_bar">
-          <i class="fa-solid fa-magnifying-glass"></i>
-          <input type="text" placeholder="How to, etc..." />
-          <button>Search</button>
+    <!-- Main Hero Section -->
+    <div class="hero flex-1">
+        <div class="search-bar">
+            <h2 class="heading">Let's Explore</h2>
+            <h2 class="heading">New Possibilities..</h2>
+            <div class="hero-search-bar">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" placeholder="How to, etc..."/>
+                <button>Search</button>
+            </div>
+            <div class="hero-tags">
+                <span>#design</span>
+                <span>#Decelope</span>
+                <span>#Market</span>
+            </div>
         </div>
-        <div class="hero_tag">
-          <span>#design</span>
-          <span>#Develope</span>
-          <span>#Market</span>
+        <div class="hero-image">
+            <img src="./images/Group.png"/>
         </div>
-      </div>
-
-      <div class="hero_img">
-        <img src="./Group.png" alt="" />
-      </div>
     </div>
-
-    <!-- Latest Blog Section -->
-
-    <div class="latest_blog">
-      <div class="latest_blog_img">
-        <img src="./Rectangle 31 (1).png" alt="Latest Blog" height="350px" />
-      </div>
-
-      <div class="blog_content flex1">
-        <div>
-          <h1 class="blog_heading">Latest post heading sample example..</h1>
+    <!-- Blog Section -->
+    <div class="latest-blog">
+        <div class="blog-image">
+            <img src="./images/Rectangle 31 (1).png" alt="bot-pic"/>
         </div>
-
-        <div class="author_date flex1">
-          <p id="name">By Author Name</p>
-          <p id="date">23 dec.</p>
+        <div class="blog-content">
+            <div>
+                <h1 class="blog-heading">Latest post heading sample example..</h1>
+            </div>
+            <div class="details">
+                <p id="name">By Author Name</p>
+                <p id="date">23 july.</p>
+            </div>
+            <div class="content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, cupiditate? Delectus quas consequuntur consectetur rerum quibusdam repellat culpa alias repellendus eos doloribus maiores, aliquid molestiae illo suscipit maxime aut itaque magni nemo facere perspiciatis velit quaerat sint exercitationem? Architecto animi, culpa ducimus voluptas mollitia fugit? Provident asperiores eius eveniet quaerat accusamus maxime nesciunt assumenda optio quisquam perferendis nemo, non ratione soluta et, expedita facere ex voluptatem fugit labore harum adipisci ipsam. Quae ab non maiores laboriosam sequi corrupti ad, repellat consequuntur ut officia error soluta enim libero mollitia deleniti consectetur pariatur earum maxime sapiente fuga? Itaque voluptates nihil provident dicta?Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quae beatae aut blanditiis nemo perspiciatis deserunt ducimus accusantium, ipsam consequuntur ullam explicabo quam, unde numquam ex, excepturi praesentium autem sequi facilis vero ad consectetur. Necessitatibus delectus modi officia ullam natus! Ipsam, eveniet nesciunt maxime voluptatem perferendis corrupti provident optio quis culpa nemo tenetur cumque vel quisquam doloribus, temporibus hic consequatur labore nihil animi delectus! Quae sapiente quia rerum ad perferendis tenetur quidem labore totam, incidunt sint vero laboriosam dolorum consequatur? Vitae autem nemo dolore sed, nesciunt excepturi, ducimus fugit eligendi eius facilis temporibus aliquam dignissimos doloribus accusantium facere et. Atque!</p>
+            </div>
         </div>
-
-        <div class="blog_para more_para">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
-            minima neque animi itaque eveniet, reiciendis culpa saepe ullam id
-            sit temporibus? Optio reprehenderit mollitia error, ullam molestiae
-            cupiditate corporis consectetur? Modi nisi sunt consequatur
-            deleniti, aliquam dolores ipsum dolorem nulla necessitatibus
-            voluptatem quo nobis et expedita, maxime autem praesentium?
-            Laudantium nisi amet dicta delectus ut in nobis. Aut, id quo.
-            Doloremque culpa ullam hic nisi id quis cupiditate praesentium quam,
-            soluta alias rerum fuga? Nam soluta possimus, perspiciatis dolorum
-            odit repudiandae ratione molestiae cum odio ad minima similique!
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis,
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-            doloremque quaerat, ad commodi laborum enim illo quia eligendi
-            magnam minus? aliquam? Harum, repudiandae? Lorem ipsum dolor sit
-            amet consectetur adipisicing elit. Iure, numquam. Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Alias, laborum!
-          </p>
-        </div>
-      </div>
     </div>
-
-    <!-- more blogs section -->
-
-    <div class="moreBlog_section flex1">
-      <!-- item-1 -->
-      <div class="item">
-        <!-- item-1 image -->
-        <div class="more_blog_img">
-          <img src="./Rectangle 15.png" alt="" />
+    <!-- Extra Blog Section -->
+    <div class="extra-blog">
+        <div class="blog-1">
+            <div class="extra-blog-img">
+                <img src="./images/Rectangle 15.png" alt="blog-img"/>
+            </div>
+            <div class="extra-blog-text">
+                <h2 class="extra-blog-head">Other post heading sample tex.. </h2>
+                <div class="author-date">
+                    <p>By Writter Name</p>
+                    <p>23 july</p>
+                </div>
+                <div class="extra-blog-content">
+                    "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex consectetur tempora ipsa libero eos explicabo quas dolorum similique at et totam, facere quis necessitatibus nulla quam aliquam non exercitationem in!"
+                </div>
+                <div class="see-more">
+                    <a href="#">See full</a>
+                </div>
+            </div>
         </div>
-        <!-- item-1 content -->
-        <div class="blog_content item_content flex1">
-          <div>
-            <h1 class="more_head">Latest post heading sample example..</h1>
-          </div>
-
-          <div class="author_date flex1">
-            <p id="name">By Author Name</p>
-            <p id="date">23 dec.</p>
-          </div>
-
-          <div class="blog_para more_para">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
-              minima neque animi itaque eveniet, reiciendis culpa saepe ullam id
-              sit temporibus? Optio reprehenderit mollitia error,
-            </p>
-          </div>
+        <div class="blog-2 blog-1">
+            <div class="extra-blog-img">
+                <img src="./images/Rectangle 15.png" alt="blog-img"/>
+            </div>
+            <div class="extra-blog-text">
+                <h2 class="extra-blog-head">Other post heading sample tex.. </h2>
+                <div class="author-date">
+                    <p>By Writter Name</p>
+                    <p>23 july</p>
+                </div>
+                <div class="extra-blog-content">
+                    "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex consectetur tempora ipsa libero eos explicabo quas dolorum similique at et totam, facere quis necessitatibus nulla quam aliquam non exercitationem in!"
+                </div>
+                <div class="see-more">
+                    <a href="#">See full</a>
+                </div>
+            </div>
         </div>
-      </div>
-
-      <!-- item-2 -->
-
-      <div class="item">
-        <!-- item-2 image -->
-        <div class="more_blog_img">
-          <img src="./Rectangle 15.png" alt="" />
+        <div class="blog-3 blog-1">
+            <div class="extra-blog-img">
+                <img src="./images/Rectangle 15.png" alt="blog-img"/>
+            </div>
+            <div class="extra-blog-text">
+                <h2 class="extra-blog-head">Other post heading sample tex.. </h2>
+                <div class="author-date">
+                    <p>By Writter Name</p>
+                    <p>23 july</p>
+                </div>
+                <div class="extra-blog-content">
+                    "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex consectetur tempora ipsa libero eos explicabo quas dolorum similique at et totam, facere quis necessitatibus nulla quam aliquam non exercitationem in!"
+                </div>
+                <div class="see-more">
+                    <a href="#">See full</a>
+                </div>
+            </div>
         </div>
-        <!-- item-2 content -->
-        <div class="blog_content item_content flex1">
-          <div>
-            <h1 class="more_head">Latest post heading sample example..</h1>
-          </div>
-
-          <div class="author_date flex1">
-            <p id="name ">By Author Name</p>
-            <p id="date">23 dec.</p>
-          </div>
-
-          <div class="blog_para more_para">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
-              minima neque animi itaque eveniet, reiciendis culpa saepe ullam id
-              sit temporibus? Optio reprehenderit mollitia error,
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <!-- item-3 -->
-
-      <div class="item">
-        <!-- item-3 image -->
-        <div class="more_blog_img">
-          <img src="./Rectangle 15.png" alt="" />
-        </div>
-        <!-- item-3 content -->
-        <div class="blog_content item_content flex1">
-          <div>
-            <h1 class="more_head">Latest post heading sample example..</h1>
-          </div>
-
-          <div class="author_date flex1">
-            <p id="name">By Author Name</p>
-            <p id="date">23 dec.</p>
-          </div>
-
-          <div class="blog_para more_para">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
-              minima neque animi itaque eveniet, reiciendis culpa saepe ullam id
-              sit temporibus? Optio reprehenderit mollitia error,
-            </p>
-          </div>
-        </div>
-      </div>
     </div>
-
-    <!-- footer section -->
-
-    <footer class="foot flex1">
-      <div class="footer_content">
-        <h3>Download</h3>
-        <h1>Otarea educore App</h1>
-        <h4>For non stop learning</h4>
-
-        <button>Download now</button>
-      </div>
-      <div class="footer_img">
-        <img src="./Group (1).png" alt="" />
-      </div>
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="foot-content">
+            <h3 class="text download">Download</h3>
+            <h1 class="company-name text">Otarea Educore App</h1>
+            <h4 class="text extra">For non stop learning</h4>
+            <button>Download now</button>
+        </div>
+        <div class="foot-img">
+            <img src="./images/Group (1).png" alt="end"/>
+        </div>
     </footer>
-
     <script
       src="https://kit.fontawesome.com/0b381e01ab.js"
       crossorigin="anonymous"></script>
-  </body>
+</body>
 </html>
